2008-07-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: If syntax mistake in config file, show
	specific error message (EJAB-616)

2008-07-17  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix to allow a server admin to add
	himself as owner of a room (EJAB-687)

	* src/Makefile.in: ejabberctl doesn't use the erl found by the
	configure script (EJAB-676)
	* src/ejabberdctl.template: Likewise

2008-07-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/Makefile.in: use -DSSL39 if compiling with R12 

2008-07-16  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Put auth_module in Info always (EJAB-549)

2008-07-16  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_poll.erl: Report connection's IP address 

	* src/ejabberd_c2s.erl: Rolled back the previous IP getting patch
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_receiver.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

2008-07-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of option 'hosts' in
	ejabberd_service
	* doc/guide.html: Likewise

2008-07-12  Badlop  <badlop@process-one.net>

	* src/configure.ac: Improve legibility
	* src/aclocal.m4: Likewise
	* src/configure: Likewise

	* src/ejabberdctl.template: Remove garbage variable. Document node
	option

	* doc/guide.tex: Add references to sections.
	* doc/guide.html: Likewise

2008-07-11  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document how to insert a newline character in
	welcome_message (EJAB-501)
	* src/ejabberd.cfg.example: Likewise

2008-07-11  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Backport C2S blacklist support from trunk
	was (EJAB-625).
	* src/mod_ip_blacklist.erl: Likewise
	* src/jlib.erl: Added IP format tuple to string function
	* src/ejabberd_socket.erl: Properly handled c2s start failure (happen
	for blacklisted IP).

2008-07-10  Badlop  <badlop@process-one.net>
